maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	{gauche()
         ^Escaper:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (estFaceMur) {return false}
        ^